--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-
-
 
 <script
   src="https://cdn.utmify.com.br/scripts/utms/latest.js"
@@ -14,17 +11,17 @@
 ></script>
 
 <script>
-  window.tikTokPixelId = "6983406731d4f9c94c961fcb";
+  window.pixelId = "69251f2e83c0b0e4729553f9";
   var a = document.createElement("script");
   a.setAttribute("async", "");
   a.setAttribute("defer", "");
-  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel-tiktok.js");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
   document.head.appendChild(a);
 </script>
 
 	<meta charset="UTF-8">
-	<title>Closet Dobrável Inteligente – Cupons Premiados</title>
-
+	<title>Cooktop Mesa De Vidro 2 Queimadores</title>
+    <link rel="icon" href="img_696da68e1e7be1.81629636 (2).png" type="image/png">
 	<meta name="robots" content="max-image-preview:large">
 	<link rel="alternate" type="application/rss+xml" title="Feed para Cupons Premiados »"
 		href="https://cuponspremiados.site/ofertas/feed/">
