--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </script>
 
 	<meta charset="UTF-8">
-	<title>Cooktop Mesa De Vidro 2 Queimadores</title>
+	<title>Vaporizador E Higienizador Vapor Top Clean Intech Machine</title>
     <link rel="icon" href="img_696da68e1e7be1.81629636 (2).png" type="image/png">
 	<meta name="robots" content="max-image-preview:large">
 	<link rel="alternate" type="application/rss+xml" title="Feed para Cupons Premiados »"
@@ -656,7 +656,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-40de7163 elementor-widget elementor-widget-image"
 					data-id="40de7163" data-element_type="widget" data-widget_type="image.default">
 					<div class="elementor-widget-container">
-						<a href="https://seguro.herepayfinish.shop/api/public/shopify?product=2190276648271&store=21902">
+						<a href="https://seguro.herepayfinish.shop/api/public/shopify?product=2190278177528&store=21902">
 							<img decoding="async" width="78" height="61" src="images/chat.png"
 								class="attachment-large size-large wp-image-38" alt=""> </a>
 					</div>
@@ -667,7 +667,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-224fbd elementor-widget elementor-widget-image"
 					data-id="224fbd" data-element_type="widget" data-widget_type="image.default">
 					<div class="elementor-widget-container">
-						<a href="https://seguro.herepayfinish.shop/api/public/shopify?product=2190276648271&store=21902">
+						<a href="https://seguro.herepayfinish.shop/api/public/shopify?product=2190278177528&store=21902">
 							<img decoding="async" width="76" height="75" src="images/cart.png"
 								class="attachment-large size-large wp-image-37" alt=""> </a>
 					</div>
@@ -680,7 +680,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<div class="elementor-widget-container">
 						<div class="elementor-button-wrapper">
 							<a id="clickbotao" class="elementor-button elementor-button-link elementor-size-sm"
-								href="https://seguro.herepayfinish.shop/api/public/shopify?product=2190276648271&store=21902">
+								href="https://seguro.herepayfinish.shop/api/public/shopify?product=2190278177528&store=21902">
 								<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Comprar agora</span>
 								</span>
@@ -744,9 +744,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="carousel-xz12b3">
 			<button class="carousel-btn-xz12b3 carousel-prev-xz12b3">&#10094;</button>
 			<div class="carousel-track-xz12b3">
-				<div class="carousel-item-xz12b3"><img src="53.png" alt="Imagem 1"></div>
-				<div class="carousel-item-xz12b3"><img src="54.png" alt="Imagem 2"></div>
-				<div class="carousel-item-xz12b3"><img src="38423jjsadask.png" alt="Imagem 3"></div>
+				<div class="carousel-item-xz12b3"><img src="a (1).png" alt="Imagem 1"></div>
+				<div class="carousel-item-xz12b3"><img src="a (2).png" alt="Imagem 2"></div>
+				<div class="carousel-item-xz12b3"><img src="a (3).png" alt="Imagem 3"></div>
 				
 			
 			
@@ -836,7 +836,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						data-id="63a78bf6" data-element_type="widget" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
 							<h2 class="elementor-heading-title elementor-size-default"><span
-									style="font-size:18px">R$</span>89,90</h2>
+									style="font-size:18px">R$</span>59,90</h2>
 						</div>
 					</div>
 				</div>
@@ -909,7 +909,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default"><span
 							style="background-color:#ee4d2d;color:white;border-radius:4px;padding:3px;font-size:12px">Indicado</span>
-						Cooktop Mesa De Vidro 2 Queimadores FG2002AVP</h2>
+						Vaporizador E Higienizador Vapor Top Clean Intech Machine</h2>
 				</div>
 			</div>
 		</div>
@@ -1024,7 +1024,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div>
 					<div>
 						<div style="padding: 5px;">
-							<img src="Macaco Hidráulico Elétrico (3).png" alt="" style="width: 100%; display: block;">
+							<img src="LPS  (1).png" alt="" style="width: 100%; display: block;">
 
 						</div>
 
@@ -1082,7 +1082,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-3c84d511 elementor-widget elementor-widget-text-editor"
 					data-id="3c84d511" data-element_type="widget" data-widget_type="text-editor.default">
 					<div class="elementor-widget-container" style="padding: 20px; margin-left: -17px; margin-top: -10px;"">
-						<p>Maria Freitas</p>
+						<p>Lucas Freitas</p>
 					</div>
 				</div>
 				<div class="elementor-element elementor-element-2fc38ddc elementor-widget elementor-widget-rating"
@@ -1190,7 +1190,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-3b281053 elementor-widget elementor-widget-text-editor"
 					data-id="3b281053" data-element_type="widget" data-widget_type="text-editor.default">
 					<div class="elementor-widget-container">
-						<p>O fogão chegou antes do prazo previsto veio tudo certinho amei...já  mandei instalar ficou como eu queria as chamas do fogão são fortes,veio bem embalado comprem sem medo!!</p>
+						<p>Ótimo produto funciona direitinho parecido com o anúncio muito bom veio bem embalado vocês estão de parabéns pelo cuidado</p>
 					</div>
 				</div>
 			</div>
@@ -1202,7 +1202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-595cee86 elementor-widget elementor-widget-image"
 					data-id="595cee86" data-element_type="widget" data-widget_type="image.default">
 					<div class="elementor-widget-container">
-						<img src="mento 01.webp" alt="" style="border-radius: 10px;">
+						<img src="br-11134103-7r98o-mbob1glvglnr76.webp" alt="" style="border-radius: 10px;">
 					</div>
 				</div>
 			</div>
@@ -1361,11 +1361,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<div class="elementor-element elementor-element-115232b5 elementor-widget elementor-widget-text-editor"
 						data-id="115232b5" data-element_type="widget" data-widget_type="text-editor.default">
 						<div class="elementor-widget-container">
-							<p>Amei!
-Chegou rápido e bem embalado.
-Produto excelente, já testei, funciona perfeitamente.
-Bonito e resistente.
-Vale o custo benefício.</p>
+							<p>Chegou certinho produto muito bom já fiz o teste esta aprovado vai facilitar muito nas minhas faxinas diárias.</p>
 						</div>
 					</div>
 				</div>
@@ -1377,7 +1373,7 @@ Vale o custo benefício.</p>
 					<div class="elementor-element elementor-element-9297ff0 elementor-widget elementor-widget-image"
 						data-id="9297ff0" data-element_type="widget" data-widget_type="image.default">
 						<div class="elementor-widget-container">
-							<img src="mento 02.webp" alt="" style="border-radius: 10px;">
+							<img src="br-11134103-7r98o-m1lcuh5qyzf547.webp" alt="" style="border-radius: 10px;">
 						</div>
 					</div>
 				</div>
@@ -1537,7 +1533,11 @@ Vale o custo benefício.</p>
 					<div class="elementor-element elementor-element-1b3d0f77 elementor-widget elementor-widget-text-editor"
 						data-id="1b3d0f77" data-element_type="widget" data-widget_type="text-editor.default">
 						<div class="elementor-widget-container">
-							<p>Eu tbm comprei o meu, e chegou no prazo certinho que eles falaram que ia chegar. Comprei dia 28/01 e chegou dia 03/02. O equipamento é massa mesmo. Podem confiar. Eu mesma instalei 🙏</p>
+							<p>Acabou de chegar. 
+Entrega antes do prazo, produto bem embalado, igual descritivo da loja. 
+Compra feita com conforto, qualidade, praticidade e segurança. 
+Recomendo. 
+Obrigada.</p>
 						</div>
 					</div>
 				</div>
@@ -1709,7 +1709,7 @@ Vale o custo benefício.</p>
 					<div class="elementor-element elementor-element-3a71f95 elementor-widget elementor-widget-text-editor"
 						data-id="3a71f95" data-element_type="widget" data-widget_type="text-editor.default">
 						<div class="elementor-widget-container">
-							<p>Comprei para minha mãe, ele disse que veio tudo certo e bem embalado. não demorou para chegar e nem pra enviar, recomendo a loja ✨</p>
+							<p>Produto veio certinho veio a embalagem perfeita sem nenhuma violação vem conforme o anúncio gostei muito obrigado toda a equipe</p>
 						</div>
 					</div>
 				</div>
@@ -1721,7 +1721,7 @@ Vale o custo benefício.</p>
 					<div class="elementor-element elementor-element-7dfc2c93 elementor-widget elementor-widget-image"
 						data-id="7dfc2c93" data-element_type="widget" data-widget_type="image.default">
 						<div class="elementor-widget-container">
-							<img src="mento 06.webp" alt="" style="border-radius: 10px;">
+							<img src="br-11134103-7r98o-m08wqwj369q5e4.webp" alt="" style="border-radius: 10px;">
 						</div>
 					</div>
 				</div>
@@ -1893,7 +1893,7 @@ Vale o custo benefício.</p>
 					<div class="elementor-element elementor-element-2b29be87 elementor-widget elementor-widget-image"
 						data-id="2b29be87" data-element_type="widget" data-widget_type="image.default">
 						<div class="elementor-widget-container">
-							<img src="mento 03.webp" alt="" style="border-radius: 10px;">
+							<img src="br-11134103-7r98o-m60astsr7fsi56.webp" alt="" style="border-radius: 10px;">
 						</div>
 					</div>
 				</div>
@@ -2066,7 +2066,7 @@ Vale o custo benefício.</p>
 					<div class="elementor-element elementor-element-595150e4 elementor-widget elementor-widget-image"
 						data-id="595150e4" data-element_type="widget" data-widget_type="image.default">
 						<div class="elementor-widget-container">
-							<img src="mento 04.webp" alt="" style="border-radius: 10px;">
+							<img src="br-11134103-81z1k-mfmjavsthf5x28.webp" alt="" style="border-radius: 10px;">
 
 						</div>
 					</div>
